--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.28.1
 pandas==1.5.3
 numpy==1.24.1
-sklearn==1.2.0
-matplotlib==3.6.2
-inventorize==1.2.3
+sklearn
+matplotlib
+inventorize
